--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bootstrap": "^5.3.2",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
